# camera-control

./: .clang-format  CMakeLists.txt  README.rst
cmake/Toolchains/: AVRGCC.cmake
include/platform/: algorithm.hpp  array.hpp  bits.hpp  concepts.hpp  core.hpp  gpio.hpp  interrupts.hpp  ints.hpp  math.hpp  mcu.hpp  special_function_register.hpp  timer.hpp  type_traits.hpp
include/platform/mcu/: atmega32u4.hpp
src/firmware/: main.cpp
